@@ -4,8 +4,8 @@
 |                                                           |
  ===========================================================
 
-enlever barre blanche sous échiquier en mode docked (à finir, voir lignes 1390 de end.tcl)
-ET LIGNES 790 de start.tcl
+Tester version pocket en UPX
+
  ===========================================================
 |                                                           |
 |                          BUGS                             |
